// Modelagem de Dados OpenTurn (DBML)
// Ref: Estrutura Cliente -> Instituições com Tenant RLS

Table CLICliente {
  CLICodigo Int [pk, increment]
  CLINome String [not null]
  CLIDocumento String [unique] // CNPJ
  CLIAtivo Boolean [default: true]
  createdAt timestamp [default: `now()`]
}

Table INSInstituicao {
  INSCodigo Int [pk, increment]
  CLICodigo Int [ref: > CLICliente.CLICodigo]
  INSNome String [not null]
  INSCodigoExterno String // Identificador no ERP
  INSAtivo Boolean [default: true]
  INSConfigHardware Json [note: 'Configurações globais de hardware (ex: Monitor ControlID)']
  createdAt timestamp [default: `now()`]
}

Table PESPessoa {
  PESCodigo Int [pk, increment, note: 'Inicia em 100']
  PESIdExterno String [note: 'ID do aluno/pessoa no ERP externo']
  PESNome String [not null]
  PESNomeSocial String
  PESDocumento String [unique, note: 'CPF ou CNPJ']
  PESEmail String
  PESTelefone String
  PESCelular String
  PESFotoBase64 String [note: 'String base64 da foto']
  PESFotoExtensao String [note: 'Extensão da foto (jpg, png)']
  PESGrupo String [note: 'Grupo da pessoa (ex: Aluno, Prof, Funcionario)']
  PESCartaoTag String [note: 'Código do cartão/tag RFID']
  PESTemplates Json [note: 'Templates biométricos (digitais)']
  PESAtivo Boolean [default: true]
  INSInstituicaoCodigo Int [ref: > INSInstituicao.INSCodigo]
  createdAt timestamp [default: `now()`]
  updatedAt timestamp [default: `now()`]
  deletedAt timestamp
}

Table MATMatricula {
  MATCodigo Int [pk, increment]
  PESCodigo Int [ref: > PESPessoa.PESCodigo]
  MATNumero String [not null, note: 'Código de Matrícula']
  MATCurso String
  MATSerie String
  MATTurma String
  INSInstituicaoCodigo Int [ref: > INSInstituicao.INSCodigo]
  createdAt timestamp [default: `now()`]
}

Table EQPEquipamento {
  EQPCodigo Int [pk, increment]
  EQPDescricao String
  EQPMarca String [note: 'Ex: ControlId']
  EQPModelo String [note: 'Ex: iDNext, iDNext+iDFace, iDNext+iDFaceMax, iDBlock, iDBlock+iDFace, iDBlock+iDFaceMax']
  EQPEnderecoIp String
  EQPConfig Json [note: 'JSON com Login, Senha, Modo (Standalone/Online/Push), Porta, etc']
  EQPUltimoSincronismo DateTime
  EQPAtivo Boolean [default: true]
  INSInstituicaoCodigo Int [ref: > INSInstituicao.INSCodigo]
  createdAt timestamp [default: `now()`]
}

Table CMDComandoFila {
  CMDCodigo Int [pk, increment]
  EQPCodigo Int [ref: > EQPEquipamento.EQPCodigo]
  CMDVerb String [default: 'POST']
  CMDEndpoint String [not null, note: 'Ex: load_objects, set_configuration']
  CMDBody Json
  CMDContentType String [default: 'application/json']
  CMDStatus ENUM_STATUS_COMANDO [default: 'PENDENTE']
  CMDResultado Json
  INSInstituicaoCodigo Int [ref: > INSInstituicao.INSCodigo]
  createdAt timestamp [default: `now()`]
  updatedAt timestamp [default: `now()`]
}

enum ENUM_STATUS_COMANDO {
  PENDENTE
  ENVIADO
  EXECUTADO
  ERRO
}

Table ERPConfiguracao {
  ERPCodigo Int [pk, increment]
  ERPSistema String [note: 'Gennera, Perseus, Lyceum, Mentor, Sponte, Sophia']
  ERPUrlBase String
  ERPToken String
  ERPConfigJson Json [note: 'Configurações específicas de cada ERP']
  INSInstituicaoCodigo Int [ref: > INSInstituicao.INSCodigo]
  createdAt timestamp [default: `now()`]
}

Table USRUsuario {
  USRCodigo Int [pk, increment]
  USRNome String [not null]
  USREmail String [unique]
  USRSenha String
  USRAtivo Boolean [default: true]
  
  // Profile fields
  USRTelefone String
  USRBio String
  USRFotoUrl String
  
  // Social links
  USRFacebook String
  USRTwitter String
  USRLinkedin String
  USRInstagram String
  
  // Address information
  USRPais String
  USRCidade String
  USREstado String
  USRCep String
  USRTaxId String

  createdAt timestamp [default: `now()`]
  updatedAt timestamp [default: `now()`]
}

Table USRAcesso {
  UACCodigo Int [pk, increment]
  USRCodigo Int [ref: > USRUsuario.USRCodigo]
  grupo ENUM_GRUPO_ACESSO [note: 'Papel do usuário neste escopo']
  CLICodigo Int [ref: > CLICliente.CLICodigo, note: 'NULL = Acesso a todos os Clientes (apenas para SUPER roles)']
  INSInstituicaoCodigo Int [ref: > INSInstituicao.INSCodigo, note: 'NULL = Acesso a todas as Instituições do Cliente (ou Global se CLICodigo for NULL)']
  createdAt timestamp [default: `now()`]
  
  note: 'Mapeia usuários para múltiplos papéis e tenants. SUPER_ROOT/ADMIN com CLICodigo=NULL possuem acesso global automático.'
}

enum ENUM_GRUPO_ACESSO {
  SUPER_ROOT [note: 'Acesso Global Irrestrito']
  SUPER_ADMIN [note: 'Acesso Global']
  ADMIN [note: 'Escopo: Cliente']
  GESTOR [note: 'Escopo: Instituição']
  OPERACAO [note: 'Escopo: Instituição']
}

// === CORE: Registro de Passagens em Catracas ===

Table REGRegistroPassagem {
  REGCodigo            Int       [pk, increment]
  PESCodigo            Int       [ref: > PESPessoa.PESCodigo, note: 'Pessoa que passou na catraca']
  REGAcao              ENUM_ACAO_PASSAGEM [not null, note: 'ENTRADA ou SAIDA']
  EQPCodigo            Int       [ref: > EQPEquipamento.EQPCodigo, note: 'Catraca onde ocorreu a passagem']
  REGTimestamp         BigInt    [not null, note: 'Unix timestamp do momento da passagem (epoch)']
  REGDataHora          DateTime  [not null, note: 'Data e hora legível da passagem']
  INSInstituicaoCodigo Int       [ref: > INSInstituicao.INSCodigo, note: 'Tenant - RLS']
  createdAt            DateTime  [default: `now()`]
}

enum ENUM_ACAO_PASSAGEM {
  ENTRADA
  SAIDA
}

// === ENGINE: Rotinas Dinâmicas (Schedule + Webhook) ===

Table ROTRotina {
  ROTCodigo            Int       [pk, increment]
  ROTNome              String    [not null]
  ROTDescricao         String
  ROTTipo              ENUM_TIPO_ROTINA [not null]
  ROTCronExpressao     String
  ROTWebhookPath       String
  ROTWebhookMetodo     ENUM_HTTP_METODO
  ROTWebhookSeguro     Boolean   [default: true, note: 'Se requer validação de token']
  ROTWebhookToken      String    [note: 'Token para validação no header/query']
  ROTCodigoJS          String    [not null]
  ROTAtivo             Boolean   [default: true]
  ROTTimeoutSeconds    Int       [default: 30, note: 'Tempo máximo de execução em segundos']
  ROTUltimaExecucao    DateTime
  INSInstituicaoCodigo Int       [ref: > INSInstituicao.INSCodigo]
  createdAt            DateTime  [default: `now()`]
  updatedAt            DateTime  [default: `now()`]
  createdBy            Int       [ref: > USRUsuario.USRCodigo]
}

Table ROTExecucaoLog {
  EXECodigo            Int       [pk, increment]
  ROTCodigo            Int       [ref: > ROTRotina.ROTCodigo, note: 'Rotina executada']
  EXEStatus            ENUM_STATUS_EXECUCAO [not null, note: 'SUCESSO, ERRO, TIMEOUT']
  EXEInicio            DateTime  [not null, note: 'Início da execução']
  EXEFim               DateTime  [note: 'Fim da execução']
  EXEDuracaoMs         Int       [note: 'Duração em milissegundos']
  EXEResultado         Json      [note: 'Saída/retorno da execução (JSON)']
  EXEErro              String    [note: 'Mensagem de erro se falhou']
  EXETrigger           String    [note: 'O que disparou: CRON, WEBHOOK, MANUAL']

  // --- Contexto do Webhook (se aplicável) ---
  EXERequestBody       Json      [note: 'Body da requisição webhook']
  EXERequestParams     Json      [note: 'Query params da requisição webhook']
  EXERequestPath       String    [note: 'Path completo da requisição webhook']

  INSInstituicaoCodigo Int       [ref: > INSInstituicao.INSCodigo, note: 'Tenant - RLS']
  createdAt            DateTime  [default: `now()`]
}

Table ROTHistoricoVersao {
  HVICodigo            Int       [pk, increment]
  ROTCodigo            Int       [ref: > ROTRotina.ROTCodigo]
  HVICodigoJS          String    [not null, note: 'Snapshot do código na versão']
  HVIObservacao        String    [note: 'Opcional: o que mudou nesta versão']
  createdBy            Int       [ref: > USRUsuario.USRCodigo]
  createdAt            DateTime  [default: `now()`]
}

enum ENUM_TIPO_ROTINA {
  SCHEDULE
  WEBHOOK
}

enum ENUM_HTTP_METODO {
  GET
  POST
  PUT
  PATCH
}

enum ENUM_STATUS_EXECUCAO {
  SUCESSO
  ERRO
  TIMEOUT
}
